# resume

./: .actrc  .env.automation  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  AUTO_APPLY_COMPLETION_REPORT.md  CHANGELOG.md  CI_CD_DEBUG_REPORT.md  DEPLOYMENT_CHECKLIST.md  README.md  ULW_MERGE_SUMMARY.md  ULW_TEST_REPORT.md  eslint.config.cjs  jest.config.cjs  jsconfig.json  main  merge-ulw-to-master  merge-ulw-to-master.go  package-lock.json  package.json  playwright.config.js  sessions.json  setup-automation  validate-cloudflare-native  wrangler.jsonc
apps/job-server/: .env.example  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  DATA_FLOW.md  Dockerfile  README.md  README_AI_FEATURES.md  SCRIPTS_GUIDE.md  docker-compose.yml  package.json
apps/job-server/scripts/: AGENTS.md  auth-headless.js  auth-persistent.js  auth-sync.js  auto-all.js  auto-apply-cron.js  ci-resume-sync.js  cookie-inject.js  extract-cookies-cdp.js  extract-wanted-cdp.js  get-cookies.js  import-cookies-manual.js  job-search-apply-pipeline.js  profile-sync.js  quick-login.js  renew-session.sh  renew-wanted-session.js  run-auto-apply.sh  skill-tag-map.js
apps/job-server/src/: AGENTS.md  cli.js  index.js  logger.js
apps/portfolio/: .dev.vars  AGENTS.md  BUILD.bazel  README.md  data.json  data_en.json  data_ja.json  entry.js  index-en.html  index.html  robots.txt  validate-seo.go  worker.js  wrangler.json  wrangler.toml
apps/portfolio/.tmp/: README.md  entry.js  entry.js.map
apps/portfolio/lib/: AGENTS.md  cards.js  entry-router-utils.js  html-transformer.js  security-headers.js  utils.js
apps/portfolio/src/: AGENTS.md
tools/: AGENTS.md  BUILD.bazel  affected  verify-agents-compliance
tools/automation/: resume-automation.js  setup-automation.go  setup-automation.sh
tools/ci/: AGENTS.md  affected.go  affected_test.go  validate-cloudflare-native.go  validate-migrations  validate-migrations.go
tools/scripts/: AGENTS.md  README.md  add-gitlab-variables.sh  ci-debug.sh  go.mod  healthcheck.go  local-dev-up.go  run-ci-local.go  setup-gitlab-oauth.go.legacy  vault-seed.go
tools/scripts/bazel/: AGENTS.md  BUILD.bazel  deploy_job_automation.sh
tools/scripts/deploy/: blue-green.go  canary.go  health-gate.go  rollback.go
tools/scripts/deployment/: AGENTS.md  deploy-gitlab-cicd.go  deploy-grafana-configs.go  deploy-helper.go  deploy-with-monitoring  deploy-with-monitoring.go  quick-deploy  quick-deploy.go  register-gitlab-runner.go.legacy
tools/scripts/dev/: miniflare.config.js
tools/scripts/monitoring/: monitor-deployment  monitor-deployment.go  setup-monitoring.go
tools/scripts/setup/: configure-n8n-workflows.js
tools/scripts/test/: go-scripts-validation.test.js  (+1 more)
(+1044 files in other folders)
