# Tools - Build & Deploy Scripts
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

# Export individual scripts for cross-package use
exports_files(glob(["scripts/**/*.go"]))

filegroup(
    name = "all_scripts",
    srcs = glob(["scripts/**/*.go", "scripts/**/*.js", "scripts/**/*.py"]),
)

# =============================================================================
# Build/Test/Deploy Targets
# =============================================================================
# Bazel facade removed - use npm scripts directly
# npm run build, npm test, npm run deploy
