# Job Automation - MCP Server
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//typescript:__subpackages__"])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.js", "**/*.json"],
        exclude = ["node_modules/**"],
        allow_empty = True,
    ),
    visibility = [
        "//tools:__pkg__",
        "//typescript:__subpackages__",
    ],
)

# Test target
# Bazel facade removed - use npm test instead

# Build target
# Bazel facade removed - use npm run build instead

# Deploy workers
# Bazel facade removed - use npm run deploy instead
