# Portfolio Worker - Cloudflare Edge
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//typescript:__subpackages__"])

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.js", "**/*.html", "**/*.css", "**/*.json"],
        exclude = ["node_modules/**", "worker.js"],
        allow_empty = True,
    ),
    visibility = [
        "//tools:__pkg__",
        "//typescript:__subpackages__",
    ],
)

# Build target (wrapper for generate-worker.js)
# Bazel facade removed - use npm run build instead

# Deploy target
# Bazel facade removed - use npm run deploy instead
